--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,27 +1,32 @@
 <div class="row">
-  <div class="col-xs-6">
-    <%= form_for(task) do |f| %>
-      <% if task.errors.any? %>
-        <div class="alert alert-warning">
-          <ul>
-            <% task.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
+  <div class="col-xs-12">
+    <div class="col-sm-offset-2 col-sm-8">
+      <div class="col-md-offset-2 col-md-8">
+       <div class="col-lg-offset-3 col-lg-6">
+          <%= form_for(task) do |f| %>
+            <% if task.errors.any? %>
+              <div class="alert alert-warning">
+                <ul>
+                  <% task.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                  <% end %>
+                </ul>
+              </div>
             <% end %>
-          </ul>
+          
+            <div class="form-group">
+              <%= f.label :status, 'ステータス' %>
+              <%= f.text_field :status, class: 'form-control' %>
+            </div>
+      
+            <div class="form-group">
+              <%= f.label :status, 'タスク' %>
+              <%= f.text_field :status, class: 'form-control' %>
+            </div>
+            <%= f.submit '投稿', class: 'btn btn-primary' %>
+          <% end %>
         </div>
-      <% end %>
-
-      <div class="form-group">
-        <%= f.label :status, 'ステータス' %>
-        <%= f.text_field :status, class: 'form-control' %>
       </div>
-
-      <div class="form-group">
-        <%= f.label :status, 'タスク' %>
-        <%= f.text_field :status, class: 'form-control' %>
-      </div>
-
-      <%= f.submit '投稿', class: 'btn btn-primary' %>
-    <% end %>
+    </div>
   </div>
 </div>
